# discord-bot

./: .gitignore  Cargo.toml  README.md  flake.nix  sample.env  service.nix  todo.md
crates/fred/: Cargo.toml
crates/fred/src/: events.rs  main.rs  tests.rs  utils.rs
crates/fred/src/commands/: checks.rs  misc.rs  mod.rs  owner.rs  reminder.rs  robot.rs  settings.rs
crates/fred/src/commands/fun/: boop.rs
crates/fred_db/: Cargo.toml
crates/fred_db/migrations/: 20221215141428_init.sql
crates/fred_db/src/: boop.rs  guilds.rs  lib.rs  reminders.rs  users.rs
crates/robotevents/: Cargo.toml
crates/robotevents/src/: lib.rs
crates/robotevents/src/model/: mod.rs  skills.rs
migrations/: 20221215141428_init.sql  20230114135224_description.sql
nix/: fred.nix
src/: .main.rs.rustfmt  db.rs  events.rs  main.rs
src/commands/: boop.rs  checks.rs  entries.rs  fun.rs  misc.rs  mod.rs  owner.rs  reminder.rs  settings.rs
src/commands/fun/: boop.rs  mod.rs
src/db/: boop.rs  entries.rs  guilds.rs  mod.rs  reminders.rs  users.rs
