[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
poise = "0.5"
tokio = { version = "1.23", features = ["full"] }
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls", "chrono", "macros"] }
extend = "1.1"
dotenvy = "0.15.6"
anyhow  = "1.0.66"
chrono ="0.4"
