[package]
name = "fred"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils"] }
poise = "0.5"
tokio = { version = "1.23", features = ["full"] }
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "chrono", "macros"] }
extend = "1.1"
anyhow  = "1.0.66"
chrono = "0.4"
humantime = "2.1.0"
log = "0.4.17"
env_logger = "0.10.0"
rand = "0.8.5"

fred_db = {path =  "../fred_db"}
robotevents = {path = "../robotevents"}
