[package]
name = "fred_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils"] }
poise = "0.5"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "chrono", "macros"] }
chrono = "0.4"
anyhow  = "1.0.66"
